[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
httparse = "1.9"
http = "1.1"
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.5"
threadpool = "1.8"
tokio = { version = "1.40", features = ["full"] }
rand = "0.8"
parking_lot = "0.12"

[dev-dependencies]
nix = { version = "0.29", features = ["net"] }
hyper = { version = "1.4", features = ["full", "server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
bytes = "1.7"
